# CefDetectorLinux

./: .gitignore  Cargo.toml  LICENSE  README.md  benchmark.sh  package-lock.json  package.json  screenshot.jxl  tag.sh
.github/scripts/: publish-aur.sh
.github/workflows/: release.yml
completions/: cefdetector.bash
icons/: icon.icns
src/: cli.rs  default_cef_icon.txt  font.rs  icon_finder.rs  index.css  index.html  index.js  main.rs  models.rs  package.json  package_manager.rs  search.rs  ui.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/completions/: cefdetector.fish  cefdetector.zsh
src-tauri/src/: cli.rs  icon_finder.rs  main.rs  models.rs  package_manager.rs  search.rs
src-tauri/ui/: appwindow.slint
ui/: appwindow.slint
