[package]
name = "cefdetector"
version = "0.2.2"
description = "Check how many CEFs are on your Linux."
authors = ["Origuchi"]
license = "MIT"
repository = "https://github.com/Tobiichi-Origuchi/CefDetectorLinux"
edition = "2024"
rust-version = "1.96.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
slint-build = "1.9.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
base64 = "0.22"
pelite = "0.10"
ignore = "0.4"
regex = "1.12"
memchr = "2.8"
memmap2 = "0.9"
slint = "1.9.0"
backhand = "0.25"
image = "0.25"

[package.metadata.packager]
identifier = "com.cefdetector.linux"
category = "Utility"
description = "Check how many CEFs are on your Linux."
icons = ["icons/32x32.png", "icons/128x128.png", "icons/128x128@2x.png", "icons/icon.icns", "icons/icon.ico"]
formats = ["deb", "pacman"]
out-dir = "target/release/packager"
before-packaging-command = "cargo build --release"

[package.metadata.packager.deb]
files = { "completions/cefdetector.bash" = "/usr/share/bash-completion/completions/cefdetector", "completions/cefdetector.zsh" = "/usr/share/zsh/vendor-completions/_cefdetector", "completions/cefdetector.fish" = "/usr/share/fish/vendor_completions.d/cefdetector.fish" }

[package.metadata.packager.pacman]
files = { "completions/cefdetector.bash" = "/usr/share/bash-completion/completions/cefdetector", "completions/cefdetector.zsh" = "/usr/share/zsh/vendor-completions/_cefdetector", "completions/cefdetector.fish" = "/usr/share/fish/vendor_completions.d/cefdetector.fish" }
