[package]
name = "cefdetector"
version = "0.2.5"
description = "Check how many CEFs are on your Linux."
authors = ["Origuchi"]
license = "MIT"
repository = "https://github.com/Tobiichi-Origuchi/CefDetectorLinux"
edition = "2024"
rust-version = "1.96.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
pelite = "0.10"
ignore = "0.4"
regex = "1.12"
memchr = "2.8"
memmap2 = "0.9"
backhand = "0.25"
image = { version = "0.25", default-features = false, features = ["png", "ico", "webp"] }
mimalloc = "0.1"
eframe = "0.31"
egui = "0.31"

[package.metadata.packager]
identifier = "cefdetector"
category = "Utility"
description = "Check how many CEFs are on your Linux."
icons = ["icons/32x32.png", "icons/128x128.png", "icons/128x128@2x.png", "icons/icon.icns", "icons/icon.ico"]
formats = ["deb", "pacman"]
out-dir = "target/release/packager"
before-packaging-command = "cargo build --release"

[package.metadata.packager.deb]
files = { "completions/cefdetector.bash" = "/usr/share/bash-completion/completions/cefdetector", "completions/cefdetector.zsh" = "/usr/share/zsh/vendor-completions/_cefdetector", "completions/cefdetector.fish" = "/usr/share/fish/vendor_completions.d/cefdetector.fish" }

[package.metadata.packager.pacman]
files = { "completions/cefdetector.bash" = "/usr/share/bash-completion/completions/cefdetector", "completions/cefdetector.zsh" = "/usr/share/zsh/vendor-completions/_cefdetector", "completions/cefdetector.fish" = "/usr/share/fish/vendor_completions.d/cefdetector.fish" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
