[package]
name = "cefdetector"
version = "0.1.8"
description = "A Tauri App"
authors = ["Origuchi"]
license = "MIT"
repository = "https://github.com/Tobiichi-Origuchi/CefDetectorLinux"
edition = "2024"
rust-version = "1.96.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2.4"
base64 = "0.22"
pelite = "0.10"
ignore = "0.4"
regex = "1.12"
memchr = "2.8.2"
memmap2 = "0.9.10"
